fix: card back on ios test#4

--- a/assets/css/gamestyle.css
+++ b/assets/css/gamestyle.css
@@ -258,6 +258,7 @@ body{
 
 .card{ /* background-color: for cards in order to manipulate the css */
     position: relative; /* makes sure card face will be inside of our card */
+    -webkit-position: relative;
     cursor: pointer;
     height: 175px;
     width: 125px;
@@ -272,6 +273,7 @@ body{
 
 .card-face{
     position: absolute; /* to over lap on top of each other */
+    -webkit-position: relative;
     width: 100%;
     height: 100%;
     align-items: center;
@@ -279,9 +281,13 @@ body{
     display: flex;
     overflow: hidden; /*To fix the images breaking the borders of the cardface*/
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
     border-radius: 12px ;
     border-width: 1px ;
     border-style: solid;
+    -webkit-transition: transform 500ms ease-in-out;
+    -ms-transition: transform 500ms ease-in-out;
     transition: transform 500ms ease-in-out; /* this is to slow down the flipping of the card once hovered over*/
     
 }
